@@ -138,8 +138,8 @@ public class ExportExcel {
         // Field sorting
         Collections.sort(annotationList, new Comparator<Object[]>() {
             public int compare(Object[] o1, Object[] o2) {
-                return new Integer(((ExcelField) o1[0]).sort()).compareTo(
-                        new Integer(((ExcelField) o2[0]).sort()));
+                return Integer.valueOf(((ExcelField) o1[0]).sort()).compareTo(
+                        Integer.valueOf(((ExcelField) o2[0]).sort()));
             }
 
             ;
